# voxelproject

./: CMakeLists.txt
include/: block.hpp  camera.hpp  chunk.hpp  mesh.hpp  shader.hpp  texture.hpp  world.hpp
include/glad/: glad.h
shaders/: fragment.fs  vertex.vs
src/: camera.cpp  chunk.cpp  glad.c  main.cpp  mesh.cpp  shader.cpp  texture.cpp  world.cpp
